--- a/HW1/ee046746_hw2_classification_foundation_models.ipynb
+++ b/HW1/ee046746_hw2_classification_foundation_models.ipynb
@@ -639,7 +639,33 @@
       "Epoch [71/100], Train Loss: 0.0002, Train Accuracy: 0.9964, Test Accuracy: 0.5982\n",
       "Epoch [72/100], Train Loss: 0.0001, Train Accuracy: 0.9965, Test Accuracy: 0.6083\n",
       "Epoch [73/100], Train Loss: 0.0389, Train Accuracy: 0.9993, Test Accuracy: 0.6255\n",
-      "Epoch [74/100], Train Loss: 0.0001, Train Accuracy: 0.9990, Test Accuracy: 0.6174\n"
+      "Epoch [74/100], Train Loss: 0.0001, Train Accuracy: 0.9990, Test Accuracy: 0.6174\n",
+      "Epoch [75/100], Train Loss: 0.0007, Train Accuracy: 0.9985, Test Accuracy: 0.6156\n",
+      "Epoch [76/100], Train Loss: 0.0035, Train Accuracy: 0.9981, Test Accuracy: 0.6086\n",
+      "Epoch [77/100], Train Loss: 0.1847, Train Accuracy: 0.9981, Test Accuracy: 0.6096\n",
+      "Epoch [78/100], Train Loss: 0.0000, Train Accuracy: 0.9956, Test Accuracy: 0.6063\n",
+      "Epoch [79/100], Train Loss: 0.0008, Train Accuracy: 0.9937, Test Accuracy: 0.6014\n",
+      "Epoch [80/100], Train Loss: 0.0362, Train Accuracy: 0.9950, Test Accuracy: 0.6060\n",
+      "Epoch [81/100], Train Loss: 0.0000, Train Accuracy: 0.9967, Test Accuracy: 0.6045\n",
+      "Epoch [82/100], Train Loss: 0.0000, Train Accuracy: 0.9989, Test Accuracy: 0.6092\n",
+      "Epoch [83/100], Train Loss: 0.0005, Train Accuracy: 0.9992, Test Accuracy: 0.6181\n",
+      "Epoch [84/100], Train Loss: 0.1019, Train Accuracy: 0.9987, Test Accuracy: 0.6179\n",
+      "Epoch [85/100], Train Loss: 0.0000, Train Accuracy: 0.9975, Test Accuracy: 0.6116\n",
+      "Epoch [86/100], Train Loss: 0.1075, Train Accuracy: 0.9991, Test Accuracy: 0.6109\n",
+      "Epoch [87/100], Train Loss: 0.0011, Train Accuracy: 0.9988, Test Accuracy: 0.6152\n",
+      "Epoch [88/100], Train Loss: 0.0043, Train Accuracy: 0.9991, Test Accuracy: 0.6120\n",
+      "Epoch [89/100], Train Loss: 0.0013, Train Accuracy: 0.9968, Test Accuracy: 0.6063\n",
+      "Epoch [90/100], Train Loss: 0.0033, Train Accuracy: 0.9910, Test Accuracy: 0.5895\n",
+      "Epoch [91/100], Train Loss: 0.0547, Train Accuracy: 0.9951, Test Accuracy: 0.6029\n",
+      "Epoch [92/100], Train Loss: 0.1089, Train Accuracy: 0.9967, Test Accuracy: 0.5957\n",
+      "Epoch [93/100], Train Loss: 0.0001, Train Accuracy: 0.9984, Test Accuracy: 0.6069\n",
+      "Epoch [94/100], Train Loss: 0.0002, Train Accuracy: 0.9985, Test Accuracy: 0.6149\n",
+      "Epoch [95/100], Train Loss: 0.0028, Train Accuracy: 0.9991, Test Accuracy: 0.6153\n",
+      "Epoch [96/100], Train Loss: 0.0000, Train Accuracy: 0.9992, Test Accuracy: 0.6230\n",
+      "Epoch [97/100], Train Loss: 0.0000, Train Accuracy: 0.9989, Test Accuracy: 0.6078\n",
+      "Epoch [98/100], Train Loss: 0.0000, Train Accuracy: 0.9999, Test Accuracy: 0.6164\n",
+      "Epoch [99/100], Train Loss: 0.0001, Train Accuracy: 0.9997, Test Accuracy: 0.6163\n",
+      "Epoch [100/100], Train Loss: 0.0514, Train Accuracy: 0.9981, Test Accuracy: 0.6104\n"
      ]
     }
    ],
@@ -687,9 +713,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Accuracy: 0.6104\n"
+     ]
+    }
+   ],
    "source": [
     "#  Test the model\n",
     "test_accuracy = get_test_accuracy(model, test_dataloader)\n",
