--- a/HW1/ee046746_hw2_classification_foundation_models.ipynb
+++ b/HW1/ee046746_hw2_classification_foundation_models.ipynb
@@ -76,16 +76,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x2518fd53f10>"
+       "<torch._C.Generator at 0x276e7f9b1d0>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,34 +681,43 @@
     "optimizer = torch.optim.Adam(model.parameters(), lr=0.001)\n",
     "\n",
     "# Train the model\n",
-    "model.train()\n",
-    "num_epochs = 100\n",
-    "total_step = len(train_dataloader)\n",
+    "def train_model(model, train_dataloader, test_dataloader, criterion, optimizer, num_epochs=100):\n",
+    "    model.train()\n",
+    "    train_losses = []\n",
+    "    train_accuracies = []\n",
+    "    test_accuracies = []\n",
     "\n",
-    "train_losses = []\n",
-    "train_accuracies = []\n",
-    "test_accuracies = []\n",
+    "    for epoch in range(num_epochs):\n",
+    "        for i, (images, labels) in enumerate(train_dataloader):\n",
     "\n",
-    "for epoch in range(num_epochs):\n",
-    "    for i, (images, labels) in enumerate(train_dataloader):\n",
+    "            images = images.to(device)\n",
+    "            labels = labels.to(device)\n",
     "\n",
-    "        images = images.to(device)\n",
-    "        labels = labels.to(device)\n",
+    "            model.train()\n",
+    "            outputs = model(images)\n",
+    "            loss = criterion(outputs, labels)\n",
     "\n",
-    "        model.train()\n",
-    "        outputs = model(images)\n",
-    "        loss = criterion(outputs, labels)\n",
+    "            optimizer.zero_grad()\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
     "\n",
-    "        optimizer.zero_grad()\n",
-    "        loss.backward()\n",
-    "        optimizer.step()\n",
+    "        test_accuracy  = get_test_accuracy(model, test_dataloader)\n",
+    "        train_accuracy = get_test_accuracy(model, train_dataloader)\n",
+    "        train_losses.append(loss.item())\n",
+    "        train_accuracies.append(train_accuracy)\n",
+    "        test_accuracies.append(test_accuracy)  \n",
+    "        print(f'Epoch [{epoch + 1}/{num_epochs}], Train Loss: {loss.item():.4f}, Train Accuracy: {train_accuracy:.4f}, Test Accuracy: {test_accuracy:.4f}')\n",
     "\n",
-    "    test_accuracy  = get_test_accuracy(model, test_dataloader)\n",
-    "    train_accuracy = get_test_accuracy(model, train_dataloader)\n",
-    "    train_losses.append(loss.item())\n",
-    "    train_accuracies.append(train_accuracy)\n",
-    "    test_accuracies.append(test_accuracy)  \n",
-    "    print(f'Epoch [{epoch + 1}/{num_epochs}], Train Loss: {loss.item():.4f}, Train Accuracy: {train_accuracy:.4f}, Test Accuracy: {test_accuracy:.4f}')          \n"
+    "    return train_losses, train_accuracies, test_accuracies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_losses, train_accuracies, test_accuracies = train_model(model, train_dataloader, test_dataloader, criterion, optimizer, num_epochs=100)        "
    ]
   },
   {
@@ -753,7 +762,78 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# BUILD RESNET\n",
+    "\n",
+    "class ResidualBlock(nn.Module):\n",
+    "    \"\"\"Residual Block with 2 Convolutional Layers.\"\"\"\n",
+    "\n",
+    "    def __init__(self, in_channels, out_channels, stride=1):\n",
+    "        \"\"\"Residual Block Builder.\"\"\"\n",
+    "        super(ResidualBlock, self).__init__()\n",
+    "        self.conv1 = nn.Conv2d(in_channels, out_channels, kernel_size=3, stride=stride, padding=1, bias=False)\n",
+    "        self.bn1 = nn.BatchNorm2d(out_channels)\n",
+    "        self.relu = nn.ReLU(inplace=True)\n",
+    "        self.conv2 = nn.Conv2d(out_channels, out_channels, kernel_size=3, stride=1, padding=1, bias=False)\n",
+    "        self.bn2 = nn.BatchNorm2d(out_channels)\n",
+    "        self.downsample = nn.Sequential()\n",
+    "        if stride != 1 or in_channels != out_channels:\n",
+    "            self.downsample = nn.Sequential(\n",
+    "                nn.Conv2d(in_channels, out_channels, kernel_size=1, stride=stride, bias=False),\n",
+    "                nn.BatchNorm2d(out_channels),\n",
+    "            )\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        \"\"\"Perform forward.\"\"\"\n",
+    "        identity = self.downsample(x)\n",
+    "        out = self.conv1(x)\n",
+    "        out = self.bn1(out)\n",
+    "        out = self.relu(out)\n",
+    "        out = self.conv2(out)\n",
+    "        out = self.bn2(out)\n",
+    "        out += identity\n",
+    "        out = self.relu(out)\n",
+    "        return out\n",
+    "    \n",
+    "\n",
+    "class ResNet(nn.Module):\n",
+    "    \"\"\"ResNet Builder.\"\"\"\n",
+    "\n",
+    "    def __init__(self, block, layers, num_classes=10):\n",
+    "        \"\"\"ResNet Builder.\"\"\"\n",
+    "        super(ResNet, self).__init__()\n",
+    "        self.in_channels = 16\n",
+    "        self.conv = nn.Conv2d(3, 16, kernel_size=3, stride=1, padding=1, bias=False)\n",
+    "        self.bn = nn.BatchNorm2d(16)\n",
+    "        self.relu = nn.ReLU(inplace=True)\n",
+    "        self.layer1 = self.make_layer(block, 16, layers[0], stride=1)\n",
+    "        self.layer2 = self.make_layer(block, 32, layers[1], stride=2)\n",
+    "        self.layer3 = self.make_layer(block, 64, layers[2], stride=2)\n",
+    "        self.avg_pool = nn.AdaptiveAvgPool2d((1, 1))\n",
+    "        self.fc = nn.Linear(64, num_classes)\n",
+    "\n",
+    "    def make_layer(self, block, out_channels, blocks, stride):\n",
+    "        \"\"\"Create Residual Block Layers.\"\"\"\n",
+    "        strides = [stride] + [1] * (blocks - 1)\n",
+    "        layers = []\n",
+    "        for stride in strides:\n",
+    "            layers.append(block(self.in_channels, out_channels, stride))\n",
+    "            self.in_channels = out_channels\n",
+    "        return nn.Sequential(*layers)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        \"\"\"Perform forward.\"\"\"\n",
+    "        out = self.conv(x)\n",
+    "        out = self.bn(out)\n",
+    "        out = self.relu(out)\n",
+    "        out = self.layer1(out)\n",
+    "        out = self.layer2(out)\n",
+    "        out = self.layer3(out)\n",
+    "        out = self.avg_pool(out)\n",
+    "        out = out.view(out.size(0), -1)\n",
+    "        out = self.fc(out)\n",
+    "        return out"
+   ]
   },
   {
    "cell_type": "markdown",
