--- a/HW1/ee046746_hw2_classification_foundation_models.ipynb
+++ b/HW1/ee046746_hw2_classification_foundation_models.ipynb
@@ -1463,11 +1463,11 @@
     "\\begin{array}{|c|c|} \\hline\n",
     "\\text{Layer} & \\text{Output dimensions}  & \\text{Number of parameters (weights)}  \\\\ \\hline\n",
     "INPUT & 64 × 64 × 3 & 0  \\\\ \\hline\n",
-    "CONV7-16 &  &   \\\\\\hline\n",
-    "POOL2 &  &   \\\\ \\hline\n",
-    "CONV7-32 &  &   \\\\ \\hline\n",
-    "POOL2 &  &   \\\\ \\hline\n",
-    "FC-3 &  &   \\\\ \\hline\n",
+    "CONV7-16 & 62 × 62 × 16 & 2352  \\\\\\hline\n",
+    "POOL2 & 31 × 31 × 16 & 0  \\\\ \\hline\n",
+    "CONV7-32 & 29 × 29 × 32 & 25088 \\\\ \\hline\n",
+    "POOL2 & 14 × 14 × 32 &  0 \\\\ \\hline\n",
+    "FC-3 & 3 & 18816 \\\\ \\hline\n",
     "\\end{array}"
    ]
   },
@@ -1484,9 +1484,52 @@
     "2. **Batch size**\n",
     "3. **Number of layers**\n",
     "4. **Training set size**\n",
-    "5. **Test set size**\n",
+    "5. **Test set size**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. **Learning rate (Lr)**: \n",
+    "    - **Could it be contributing to the overfitting?** Yes, a high learning rate can cause the model to converge too quickly and overfit the training data.\n",
+    "    - **How?** A high learning rate can cause the model to overshoot the optimal weights and biases, leading to poor generalization on unseen data.\n",
+    "    - **Mitigation method**: Reduce the learning rate, use learning rate schedules, or apply regularization techniques like L1 or L2 regularization.\n",
     "\n",
-    "b. After conducting multiple trials with your model, you decided to add dropout to it. Describe the role of dropout during training and testing, and explain how it helps in reducing overfitting.\n"
+    "2. **Batch size**:\n",
+    "    - **Could it be contributing to the overfitting?** Yes, a small batch size can lead to overfitting.\n",
+    "    - **How?** A small batch size, when randomly sampled, can result in gradient steps that reflect only the specific data in the small batch rather than the entire dataset. This can cause the model to minimize training loss based on these specific samples. When combined with learning rate scheduling, the initial gradient steps can be large compared to later more relevant data points, causing the model to overshoot the optimal weights and biases. This can lead to poor generalization on unseen data.\n",
+    "    - **Mitigation method**: Increase the batch size, use batch normalization, or apply dropout regularization.\n",
+    "\n",
+    "3. **Number of layers**:\n",
+    "    - **Could it be contributing to the overfitting?** Yes, having too many layers can lead to overfitting.\n",
+    "    - **How?** Deep networks with many layers (many parameters) have a higher capacity to memorize the training data, leading to overfitting.\n",
+    "    - **Mitigation method**: Lower the number of layers, use regularization techniques like dropout, or apply early stopping.\n",
+    "\n",
+    "4. **Training set size**:\n",
+    "    - **Could it be contributing to the overfitting?** Yes, a small training set size can lead to overfitting.\n",
+    "    - **How?** With a small training set, the model may memorize the training examples rather than learning the underlying patterns in the data. This can lead to poor generalization on unseen data.\n",
+    "    - **Mitigation method**: Increase the training set size, use data augmentation (to increase the training set), or apply regularization techniques.\n",
+    "\n",
+    "5. **Test set size**:\n",
+    "    - **Could it be contributing to the overfitting?** No, the test set size does not directly contribute to overfitting.\n",
+    "    - **How?** The test set size is used to evaluate the model's performance on unseen data. It does not affect the training process or the model's ability to generalize."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "b. After conducting multiple trials with your model, you decided to add dropout to it. Describe the role of dropout during training and testing, and explain how it helps in reducing overfitting."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Dropout** is a regularization technique used during training to prevent overfitting in neural networks. During training, dropout randomly sets a fraction of the input units to zero at each update, effectively \"dropping out\" some neurons. During testing, dropout is disabled, and the full network is used for prediction, but, to compensate for the leak of dropout, the weights are scaled down by the dropout rate. This prevents the network from relying too heavily on specific neurons and encourages the network to learn more robust features. \n",
+    "\n",
+    "Assume one neuron is dominant in the network and the model relies heavily on it, which encourages overfitting (only a tiny number of weights decide on the prediction). If that neuron is dropped out during training, the network will learn to rely on other neurons, making the model more robust and less prone to overfitting."
    ]
   }
  ],
