--- a/HW2/ee046746_hw2_features.ipynb
+++ b/HW2/ee046746_hw2_features.ipynb
@@ -895,6 +895,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "1. Semantic Segmentation is a computer vision task in which we classify each pixel in an image into a class. In contrast, Instance Segmentation is a computer vision task in which we detect and classify objects in an image, while also distinguishing between different instances of the same object. In Instance Segmentation, we want to detect the boundaries of objects, and classify each pixel in an image as belonging to a particular object instance, not just a class.\n",
+    "One algorithm for Semantic Segmentation is PSPNet. One algorithm for Instance Segmentation is Mask R-CNN.\n",
+    "\n",
+    "2. Image A:\n",
+    "\n",
+    "Intesection: $\\text{triangle} = \\frac{height \\cdot base}{2} = \\frac{r \\cdot 2r}{2} = r^2$\n",
+    "\n",
+    "Union: $circle = \\pi r^2$\n",
+    "\n",
+    "IoU: $\\frac{r^2}{\\pi r^2} = \\frac{1}{\\pi}$\n",
+    "\n",
+    "\n",
+    "Image B:\n",
+    "\n",
+    "Intesection: $\\text{half circle} = \\frac{\\pi r^2}{2}$\n",
+    "\n",
+    "Union: $\\text{triangle} + \\text{circle} - \\text{half circle} = \\frac{r \\cdot 4r}{2} + \\pi \\cdot r^2 - \\frac{\\pi r^2}{2} = r^2 (2 + \\frac{\\pi}{2})$\n",
+    "\n",
+    "IoU: $\\frac{\\frac{\\pi r^2}{2}}{r^2 (2 + \\frac{\\pi}{2})} = \\frac{\\pi}{4+\\pi}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## <img src=\"https://img.icons8.com/dusk/64/000000/prize.png\" style=\"height:50px;display:inline\"> References & Credits\n",
     "* [1] P. Burt and E. Adelson. The Laplacian Pyramid as a Compact Image Code. IEEE\n",
     "Transactions on Communications, 31(4):532{540, April 1983.\n",
